Cleanup (formatting)
GitOrigin-RevId: 1e1b567a32a20e134c6cd183feebaaa2d3b11993